feat: enhance UsuarioMapper to include total blocked posts count